# rapid-elastic

./: .gitignore  README.md  athena.py  client_helper.py  config.py  counts.py  deprecated.py  disease_icd10.py  disease_list.py  disease_names.py  elastic_helper.py  filetool.py  kql_syntax.py  pipeline.py  pyproject.toml  runner.py  test_disease_icd10.py  test_disease_names.py  test_icd10.py  test_querystring.py  test_typesafety.py  timestamp.py  typesafety.py
docs/: server-setup.md
rapid/: config.py  disease_icd10.py  disease_names.py  elastic_helper.py  filetool.py  naming.py  pipeline.py  sql_compare.py  timestamp.py
rapid_elastic/: __init__.py  cli.py  config.py  disease_icd10.py  disease_names.py  elastic_helper.py  filetool.py  kql_syntax.py  naming.py  pipeline.py  sampling.py  sql_compare.py
rapid_elastic/resources/: aggregate-results-detailed-anon.sql  aggregate-results-review-stats.sql  aggregate_results_detailed_anon_stats.sql  disease_names_expanded.json  disease_names_expanded.json.query.json  query_topics.json  rapid__aggregate-results-detailed-anon.sql  rapid__disease_prevalence.sql  rapid__icd10_string.sql  rapid__match_both_sample_notes.sql  rapid__match_compare.sql  rapid__match_icd10_sample_patients.sql  rapid__match_notes_sample_patients.sql  rapid__network_ppv.sql  rapid__network_ppv_sum.sql  rapid__network_ppv_sum_checks.sql  rapid__network_ppv_sum_checks2.sql  rapid__ppv.sql  rapid__site_count.sql  rapid__site_count_bch.sql  rapid__site_count_cchmc.sql  rapid__site_count_chop.sql  rapid__site_count_pitt.sql  rapid__site_count_regi.sql  rapid__site_count_uthsc.sql  rapid__site_count_washu.sql  rapid__site_ppv.sql  rapid__site_ppv_bch.sql  rapid__summary.sql  rsync_archive.sh  site_count.sql
rapid_elastic/resources/deprecated/: UNIQUE_LT50_PER_100K.csv  aggregate_results_detailed_anon_stats.sql  cohorts__rare_codeset_broad_lt50_per_100k.sql  cohorts__rare_codeset_unique_lt10_per_100k.sql  cohorts__rare_codeset_unique_lt50_per_100k.sql  cohorts__rare_match_icd10.sql  cohorts__rare_match_notes.sql  disease_names_spelling.json
resources/: BROAD_LT10_PER_100K.csv  BROAD_LT10_PER_100K.csv.json  BROAD_LT10_PER_100K.csv.sql  BROAD_LT50_PER_100K.csv  BROAD_LT50_PER_100K.csv.json  BROAD_LT50_PER_100K.csv.sql  ELASTIC_FIELDS.json  NEW_MASTER_04-13-2025.csv  NEW_MASTER_04-13-2025.csv.prompts.txt  RARE_LT10_PER_100K.csv  RARE_LT50_PER_100K.csv  UNIQUE_LT10_PER_100K.csv.json  UNIQUE_LT10_PER_100K.csv.sql  UNIQUE_LT50_PER_100K.csv.json  UNIQUE_LT50_PER_100K.csv.sql  cohorts__rare_codeset.sql  cohorts__rare_codeset_broad_lt10_per_100k.sql  count.sql  disease_names.json  disease_names_duplicates.json  disease_names_expanded.json  disease_names_expanded.json.prompts.txt  disease_names_expanded.json.query.json  disease_names_expanded.json.query.txt  disease_names_legacy.json  disease_names_merged.json  disease_names_merged.json.prompts.txt  disease_names_spelling.json  rapid__codeset.sql  rapid__codeset_new_master_04_13_2025.sql  rapid__match_icd10.sql  rapid__match_notes.sql  rapid__match_notes_sample_notes.sql  rsync_archive.sh  tables.list
resources/deprecated/: BROAD_LT10_PER_100K.csv  BROAD_LT50_PER_100K.csv  cohorts__rare_compare.sql  disease_names.json  disease_names_expanded.json.prompts.txt  disease_names_merged.json
tests/: test_config.py  test_deprecated.py  test_disease_icd10.py  test_disease_names.py  test_disease_names_cchmc.py  test_disease_names_chop.py  test_disease_names_pitt.py  test_disease_names_regi.py  test_disease_names_sum.py  test_disease_names_uthsc.py  test_disease_names_washu.py  test_elastic_fields.py  test_filetool.py  test_kql_syntax.py  test_querystring.py  test_sampling.py  test_samplnig.py  test_scp.py  test_sql_compare.py  test_tokenizer.py
(+6 files in other folders)
