[project]
name = "rapid-elastic"
requires-python = ">= 3.10"
dependencies = [
    "elasticsearch",
    "rich",
]

readme = "README.md"
license = { text="Apache License 2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["description", "version"]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
]

[project.urls]
"Homepage" = "https://github.com/smart-on-fhir/rapid-elastic"

[project.scripts]
rapid-elastic = "rapid_elastic.cli:main_cli"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = [
    "docs/",
    "tests/",
    "LICENSE",
]
exclude = [
    "**/.pytest_cache",
]
