[project]
name = "rapid-elastic"
requires-python = ">= 3.10"
dependencies = [
    "rich",
    "elasticsearch>=8,<9",
    "pandas <3, >=2.1.3",
]

readme = "README.md"
license = { text="Apache License 2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["description", "version"]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
]

[project.urls]
"Homepage" = "https://github.com/smart-on-fhir/rapid-elastic"

[project.scripts]
rapid-elastic = "rapid_elastic.cli:main_cli"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = [
    "docs/",
    "tests/",
    "LICENSE",
]
exclude = [
    "**/.pytest_cache",
    # Basically, we just include query_topics.json from resources/
    "rapid_elastic/resources/deprecated",
    "rapid_elastic/resources/disease_names.json",
    "rapid_elastic/resources/disease_names_expanded.json.query.json",
    "rapid_elastic/resources/disease_names_legacy.json",
    "rapid_elastic/resources/*.csv",
    "rapid_elastic/resources/*.list",
    "rapid_elastic/resources/*.py",
    "rapid_elastic/resources/*.sh",
    "rapid_elastic/resources/*.sql",
    "rapid_elastic/resources/*.txt",
]
